fix text align on small screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,6 +62,7 @@ $typography: mat.define-typography-config();
   flex: 3 1 auto;
   flex-flow: row wrap;
   justify-content: center;
+  text-align: center;
 
   h1 {
     @include mat.typography-level($typography, 'display-1');
